Added header to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    Hello World!
+    <h1>Hello World!</h1>
+    <h2>It's-a me, Kelsey!</h2>
   </body>
 </html>
